--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,8 @@ body {
   padding: 1.5rem;
   border-radius: 15px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-  width: 600px;
-/*   max-width: 400px; */
+  width: 100%;
+  max-width: 400px;
   transition: all 0.3s ease;
 }
 
