--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,12 @@ body {
   margin: 0;
   background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
   padding: 1rem;
+  background-image: url('./furnituremainimage.jpg');
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .bmi-calculator {
