--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body {
   align-items: center;
   min-height: 100vh;
   margin: 0;
-  background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
+/*   background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%); */
   padding: 1rem;
   background-image: url('./furnituremainimage.jpg');
   width: 100%;
