--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,12 @@ body {
   margin: 0;
 /*   background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%); */
   padding: 1rem;
+  background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20200703/pngtree-mathematics-education-calculator-ruler-hand-drawn-background-image_340649.jpg');
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   
 }
 
