--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body {
   margin: 0;
 /*   background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%); */
   padding: 1rem;
-  background-image: url('https://img.freepik.com/free-vector/body-mass-index-weight-control-with-bmi-healthy-unhealthy-lifestyle-flat-vector-illustration-fitness-indicator-before-after-diet-overall-health-body-fat-scale-concept_88138-795.jpg?w=996&t=st=1728013982~exp=1728014582~hmac=34841f4cf02a2816b024bb35ff9330a5d6b052bf0cb5166b67754051013820d2');
+  background-image: url('https://i.pinimg.com/564x/82/75/bc/8275bc5c31e650bbd9420be7e8afe5ee.jpg');
   width: 100%;
   background-position: center;
   background-repeat: no-repeat;
